--- a/ProyectoFinal_Icaro/pom.xml
+++ b/ProyectoFinal_Icaro/pom.xml
@@ -37,6 +37,18 @@
             <version>4.27.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.thedeanda</groupId>
+            <artifactId>lorem</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
